# troca-palavra

./: .gitignore  .pylintrc  LICENSE  README.md  docker-compose.yml  pyproject.toml
.vscode.example/: settings.json
docker/: api.dockerfile
scripts/: start-reload.sh
troca_palavra/: env.py
